<resources>
    <string name="app_name">Text Search</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="in_progress">In Progress</string>
    <string name="new_search">New search</string>
    <string name="search">Search</string>
    <string name="search_for">Search for</string>
    <string name="cancel">Cancel</string>
    <string name="url">Url</string>
    <string name="enter_url">Enter URL</string>
    <string name="max_url_count">Max URL count</string>
    <string name="thread_count">Max parallel URL count</string>
    <string name="url_in_progress_label">URL in progress:</string>
    <string name="status_label">Search status:</string>
    <string name="entries_label">Total text entries: </string>
    <string name="start_search">Start search</string>
    <string name="log">Log</string>
    <string name="completed">Completed</string>
    <string name="validation_cant_be_empty">This field can`t be empty</string>
    <string name="validation_number">Must be positive number</string>
    <string name="validation_url">Invalid URL</string>
    <string name="root_url_label">Root URL:</string>
    <string name="search_for_label">Search for:</string>
    <string name="prepare">Prepare</string>
    <string name="start_new_search">Start new search</string>
</resources>
