<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlTil"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlEt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textToFindTil"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textToFindEt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_for"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxUrlCountTil"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxUrlCountEt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_url_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/threadCountTil"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/threadCountEt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/thread_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>