<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlTil"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlEt"
            style="@style/SearchInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textToFindTil"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textToFindEt"
            style="@style/SearchInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_for"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxUrlCountTil"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textToFindTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxUrlCountEt"
            style="@style/SearchInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_url_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/threadCountTil"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxUrlCountTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/threadCountEt"
            style="@style/SearchInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/thread_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadCountTil" />

    <TextView
        android:id="@+id/currentUrlLabelTv"
        style="@style/SearchInputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_in_progress_label"
        android:textColor="@color/colorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/currentUrlTv"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:textColor="@color/colorValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentUrlLabelTv"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:text="http://www.google.com" />

    <TextView
        android:id="@+id/statusLabelTv"
        style="@style/SearchInputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textColor="@color/colorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentUrlTv" />

    <TextView
        android:id="@+id/statusTv"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusLabelTv"
        app:layout_constraintTop_toBottomOf="@+id/currentUrlTv"
        tools:text="In Progress" />

    <TextView
        android:id="@+id/entriesLabelTv"
        style="@style/SearchInputStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entries_label"
        android:textColor="@color/colorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusLabelTv" />

    <TextView
        android:id="@+id/entriesCountTv"
        style="@style/SearchInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/entriesLabelTv"
        app:layout_constraintTop_toBottomOf="@+id/statusLabelTv"
        tools:text="100500" />

    <ProgressBar
        android:id="@+id/searchPb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entriesLabelTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:padding="16dp"
        android:text="@string/start_search"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>